2011-05-22  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_get_main_stack_base): Convert to GC_get_stack_base
	for BeOS and OS/2; define HAVE_GET_STACK_BASE.
	* os_dep.c (GET_MAIN_STACKBASE_SPECIAL): Define when a specific
	GC_get_main_stack_base implementation is defined.
	* os_dep.c (GC_get_main_stack_base): Define that based on
	GC_get_stack_base() in a single place (only if
	GET_MAIN_STACKBASE_SPECIAL is unset); check GC_get_stack_base()
	result.

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (GC_push_selected): Remove "push_fn" argument (use
	GC_push_all directly); update the documentation; reformat the
	comment.
	* mark.c (GC_push_conditional): Simplify the code (for better
	readability).

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* mark.c (alloc_mark_stack): Use FALSE/TRUE (instead of 0/1) for
	boolean local variables.
	* doc/README.macros (GC_PREFER_MPROTECT_VDB): Update.
	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty,
	GC_remove_protection): Define for GWW_VDB and PROC_VDB in a single
	place.
	* os_dep.c (GC_page_was_dirty, GC_page_was_ever_dirty): Compute
	PHT_HASH(h) only once (store result to a local variable).

2011-05-20  Ivan Maidanski  <ivmai@mail.ru>

	* doc/README.solaris2: Update.

2011-05-19  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)

	* include/private/gcconfig.h (end, InitStackBottom): Declare
	extern variable for RTEMS.
	* include/private/gcconfig.h (DATASTART, DATAEND, STACKBOTTOM):
	Update (for RTEMS).
	* include/private/gcconfig.h (DATAEND): Fix a typo in the macro
	name (for RTEMS).
	* tests/test.c (CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER):
	Replace with CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER (for RTEMS).

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Enable for Solaris in
	single-threaded environment.

2011-05-18  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (MPROTECT_VDB): Undefine if PROC_VDB.